# cloth_simulation

./: Cargo.toml
res/: hanging.json  hanging2.json  hanging3.json  parachute.json  test.json
src/: camera.rs  cloth_generator.rs  lib.rs  main.rs  model.rs  shader.wgsl
