[package]
name = "cloth_simulation"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
cfg-if = "1"
winit = "0.28.1"
env_logger = "0.10"
log = "0.4"
wgpu = "0.15"
pollster = "0.3"
bytemuck = { version = "1.13", features = [ "derive" ] }
cgmath = "0.18"

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.7"
console_log = "0.2.0"
wgpu = { version = "0.15", features = ["webgl"]}
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4.34"
web-sys = { version = "0.3", features = [
    "Document",
    "Window",
    "Element",
]}
