[package]
name = "cloth_simulation"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "cloth_simulation_lib"
crate-type = ["cdylib", "rlib"]

[dependencies]
cfg-if = "1"
winit = "0.28.1"
env_logger = "0.10"
log = "0.4"
wgpu = "0.15"
pollster = "0.3"
bytemuck = { version = "1.13", features = [ "derive" ] }
cgmath = "0.18"
instant = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
